# VocTraining

./: CMakeLists.txt  README.md
DBoW2/: CMakeLists.txt
DBoW2/DBoW2/: FXFeat.cpp  FXFeat.h  TemplatedVocabulary.h
DBoW2/DUtils/: Random.cpp
samples/: CMakeLists.txt  LoopDetectDemo.cpp  VocTrainingDemo.cpp
src/: ORBVocabulary.h  main.cpp  utils.cpp  utils.h
train_data/: images.txt  m0000119.pgm  m0000599.pgm  m0000839.pgm  m0001079.pgm  m0001799.pgm  m0002399.pgm  m0002879.pgm  m0003119.pgm  m0003479.pgm  m0003719.pgm  m0004319.pgm  m0004919.pgm  m0005399.pgm  m0005639.pgm  m0005759.pgm  m0006239.pgm  m0006599.pgm  m0006839.pgm  m0007079.pgm  m0007799.pgm  m0008279.pgm  m0008399.pgm  m0008639.pgm  m0008999.pgm  m0009239.pgm  m0010559.pgm  m0011279.pgm  m0012719.pgm  m0013679.pgm  m0013919.pgm  m0014159.pgm  m0014279.pgm  m0014879.pgm  m0017759.pgm  m0017879.pgm  m0017999.pgm  m0020519.pgm  m0020759.pgm  m0024359.pgm  (+13 more)
